--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "kysely": "^0.26.3",
+    "prisma-kysely": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
