--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jotai": "^2.4.2",
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
