--- a/.github/workflows/modify_database_docker_image.yml
+++ b/.github/workflows/modify_database_docker_image.yml
@@ -3,7 +3,7 @@ name: Update docker starter database image
 on:
   push:
     paths:
-      - 'backend/starterData.sql'
+      - 'backend/db/starterData.sql'
 
 jobs:
   Echo-File-Changed:
