--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,4 +1,4 @@
-DATABASE_NAME="PizzeriaTest"
+DATABASE_NAME="pizzeria_test"
 DATABASE_HOST="localhost"
 DATABASE_USER="root"
 DATABASE_PASSWORD="example"
